tests/ui/type-alias-impl-trait/variance.stderr
error[E0657]: `impl Trait` cannot capture higher-ranked lifetime from `dyn` type
  --> $DIR/variance.rs:14:56
   |
LL | type NotCapturedLate<'a> = dyn for<'b> Iterator<Item = impl Sized>;
   |                                                        ^^^^^^^^^^ `impl Trait` implicitly captures all lifetimes in scope
   |
note: lifetime declared here
  --> $DIR/variance.rs:14:36
   |
LL | type NotCapturedLate<'a> = dyn for<'b> Iterator<Item = impl Sized>;
   |                                    ^^

error[E0657]: `impl Trait` cannot capture higher-ranked lifetime from `dyn` type
  --> $DIR/variance.rs:18:49
   |
LL | type Captured<'a> = dyn for<'b> Iterator<Item = impl Sized + Captures<'a>>;
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^ `impl Trait` implicitly captures all lifetimes in scope
   |
note: lifetime declared here
  --> $DIR/variance.rs:18:29
   |
LL | type Captured<'a> = dyn for<'b> Iterator<Item = impl Sized + Captures<'a>>;
   |                             ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0657`.
